<resources>
    <string name="app_name">Eseoneline</string>
    <string name="eseo_covoit">eseo covoit</string>
    <string name="news">News</string>
    <string name="plan">Plan</string>
    <string name="qui_sommes_nous">Qui sommes-nous?</string>
    <string name="mon_compte">Mon compte</string>
    <string name="eseomiam">EseoMiam</string>
    <string name="m_t_o">Météo</string>
    <string name="eseologement">EseoLogement</string>
    <string name="calendrier">Calendrier</string>
    <string name="english">English</string>
    <string name="fran_ais">Français</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_plan_eseo">PlanEseo</string>
    <string name="rdc">Rez de Chausée</string>
    <string name="_1er_etage">1er Etage</string>
    <string name="_4_etage">4éme Etage</string>
    <string name="_3_etage">3éme Etage</string>
    <string name="_2_me_etage">2éme Etage</string>
    <string name="sous_sol">Sous Sol</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="qui_somme_nous">Qui somme nous?</string>
    <string name="presentatio_eseo">L\'électronique, l\'informatique, l\'internet des objets connectés, la ville intelligente, les réseaux sociaux qui se généralisent dans nos vies et dans nos métiers, la santé, l\'automobile et les transports, l\'espace, les drones, la robotique, la maîtrise de l\'énergie, le commerce et les services en ligne, la vision artificielle... Les innovations permises par l\'avènement des systèmes intelligents et communicants sont partout, dans tous les secteurs de la société.</string>
    <string name="theme_eseo">INGÉNIEURS GÉNÉRALISTES, OBJETS ET SYSTÈMES INTELLIGENTS</string>
    <string name="accroche_presentation">Ingénieurs ESEO : la révolution est en marche !</string>
    <string name="fin_presentation">Les ingénieurs ESEO sont idéalement placés pour être les acteurs centraux de cette transformation. Les technologies de l\'information sont au coeur du projet de l\'ESEO. La compétence et le professionnalisme des ingénieurs ESEO sont unanimement reconnus par les entreprises, en témoigne le taux d\'emploi toujours proche de 100 % à la sortie de l\'école, qui a permis de qualifier l\'ESEO d\' « école anti-crise ». Les ingénieurs ESEO sont les architectes de la révolution numérique, les managers responsables et ouverts sur le monde dont les entreprises ont besoin, dans la fidélité aux valeurs humaines qui font partie du projet de l\'ESEO depuis sa fondation. Choisir l\'ESEO, c\'est choisir un avenir plus intelligent, pour soi et pour le monde.</string>
</resources>
