<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
            android:text="@string/qui_somme_nous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="13dp"
            android:id="@+id/textView4"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary" />

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_below="@+id/textView4"
            android:layout_alignStart="@+id/textView4">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        <TextView
                android:text="@string/theme_eseo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:id="@+id/textView5"
                android:textColor="@color/rougeEseo" />

        <TextView
                android:text="@string/presentatio_eseo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_alignStart="@+id/textView5"
                android:layout_marginTop="13dp"
                android:id="@+id/textView6" />

        <TextView
                android:text="@string/accroche_presentation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textColor="@color/bleuEseo"
                android:layout_below="@+id/textView6" />

        <TextView
                android:text="@string/fin_presentation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_marginTop="11dp"
                android:layout_below="@+id/textView7" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>

